--- a/pom.xml
+++ b/pom.xml
@@ -29,24 +29,32 @@
 </developers>
     <properties>
         <compileSource>1.6</compileSource>	
+        <database.host>localhost</database.host>
+        <database.port>3306</database.port>
+        <database.name>crux</database.name>
+        <database.testDbName>testCrux</database.testDbName>
+        <database.user>root</database.user>
+        <database.password>root</database.password>
+        <hbase.version>0.90.3</hbase.version>
+        <hadoop.version>0.20.2</hadoop.version>
     </properties>
     <dependencies>
 	<dependency>
     		<groupId>org.apache.hbase</groupId>
     		<artifactId>hbase</artifactId>
-    		<version>0.90.3</version>
+    		<version>${hbase.version}</version>
 	</dependency>
 	<dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase</artifactId>
-            <version>0.90.3</version>
+            <version>${hbase.version}</version>
             <classifier>tests</classifier>
             <scope>test</scope>
        </dependency>
 	<dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-test</artifactId>
-            <version>0.20.2</version>
+            <version>${hadoop.version}</version>
             <scope>test</scope>
        </dependency>
 	<dependency>
@@ -182,34 +190,34 @@
        			<configuration>
           			<driver>com.mysql.jdbc.Driver</driver>
           			<autocommit>true</autocommit>
-	  			<url>jdbc:mysql://localhost:3306/crux</url>
-          			<username>root</username>
-          			<password>qwerty</password>
+	  			<url>jdbc:mysql://${database.host}:${database.port}/${database.name}</url>
+          			<username>${database.user}</username>
+          			<password>${database.password}</password>
         		</configuration>
-        		<!--executions>
+        		<executions>
           			<execution>
-	   			 <id>drop</id>
-            			<phase>process-test-resources</phase>
+	   			 	<id>drop</id>
+            		<phase>process-test-resources</phase>
            			 <goals>
-              				<goal>execute</goal>
+              			<goal>execute</goal>
             			</goals>
-           		 < specific configuration for this execution >
+           		 <!--  specific configuration for this execution -->
             			<configuration>
-              			< specify your SQL commands, can be all of the following configurations >
-               				<sqlCommand>drop database if exists testCrux</sqlCommand>
+              			<!-- specify your SQL commands, can be all of the following configurations -->
+               				<sqlCommand>drop database if exists ${database.testDbName}</sqlCommand>
                				<onError>continue</onError>
             			</configuration>
-          		</execution>
-         		 <execution>
+          			</execution>
+         		 	<execution>
            			 <id>create</id>
 	    			<phase>process-test-resources</phase>
            			 <goals>
             				  <goal>execute</goal>
            			 </goals>
-            			 < specific configuration for this execution >
+            			 <!-- specific configuration for this execution -->
             			<configuration>
-              				< specify your SQL commands, can be all of the following configurations >
-               				<sqlCommand>create database testCrux</sqlCommand>
+              				<!-- specify your SQL commands, can be all of the following configurations -->
+               				<sqlCommand>create database if not exists ${database.testDbName}</sqlCommand>
                				<onError>continue</onError>
             			</configuration>
           		</execution>
@@ -219,17 +227,17 @@
            			 <goals>
              			 <goal>execute</goal>
             			 </goals>
-            			< specific configuration for this execution >
+            			<!-- specific configuration for this execution -->
            			 <configuration>
-              			< specify your SQL commands, can be all of the following configurations >
-             			<url>jdbc:mysql://localhost:3306/testCrux</url>
+              			<!-- specify your SQL commands, can be all of the following configurations -->
+             			<url>jdbc:mysql://${database.host}:${database.port}/${database.testDbName}</url>
              			 <srcFiles>
                 			<srcFile>${basedir}/db/schema.sql</srcFile>
               			</srcFiles>
               			 <onError>continue</onError>
             			</configuration>
          		 </execution>
-       		</executions -->
+       		</executions>
       		</plugin>
 		   <plugin>
        			 <groupId>org.codehaus.mojo</groupId>
