--- a/pom.xml
+++ b/pom.xml
@@ -1,289 +1,306 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <version>1.0</version>
-    <groupId>co.nubetech.crux</groupId>
-    <artifactId>crux</artifactId>
-    <packaging>war</packaging>
-    <name>crux</name>
-    <organization>
-<name>Nube Technologies</name>
-<url>http://nubetech.co</url>
-</organization>
-<licenses>
-<license>
-<name>Apache License</name>
-<url></url>
-<distribution>repo</distribution>
-</license>
-</licenses>
-<developers>
-<developer>
-<id>nubetech-team</id>
-<name>Nube Technologies Team</name>
-<organization>Nube Technologies</organization>
-<organizationUrl>http://nubetech.co</organizationUrl>
-</developer>
-</developers>
-    <properties>
-        <compileSource>1.6</compileSource>	
-        <database.host>localhost</database.host>
-        <database.port>3306</database.port>
-        <database.name>crux</database.name>
-        <database.testDbName>testCrux</database.testDbName>
-        <database.user>root</database.user>
-        <database.password>root</database.password>
-        <hbase.version>0.90.3</hbase.version>
-        <hadoop.version>0.20.2</hadoop.version>
-    </properties>
-    <dependencies>
-	<dependency>
-    		<groupId>org.apache.hbase</groupId>
-    		<artifactId>hbase</artifactId>
-    		<version>${hbase.version}</version>
-	</dependency>
-	<dependency>
-            <groupId>org.apache.hbase</groupId>
-            <artifactId>hbase</artifactId>
-            <version>${hbase.version}</version>
-            <classifier>tests</classifier>
-            <scope>test</scope>
-       </dependency>
-	<dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-test</artifactId>
-            <version>${hadoop.version}</version>
-            <scope>test</scope>
-       </dependency>
-	<dependency>
-    		<groupId>commons-pool</groupId>
-    		<artifactId>commons-pool</artifactId>
-    		<version>1.5.6</version>
-	</dependency>
-	<dependency>
-    		<groupId>org.mockito</groupId>
-    		<artifactId>mockito-core</artifactId>
-    		<version>1.8.5</version>
-		<scope>test</scope>
-	</dependency>
-	<dependency>
-    		<groupId>org.hibernate</groupId>
-    		<artifactId>hibernate-core</artifactId>
-    		<version>3.6.7.Final</version>
-	</dependency>
-	<dependency>
-            <groupId>com.google.code</groupId>
-            <artifactId>struts2-fullhibernatecore-plugin</artifactId>
-            <version>2.2.2-GA</version>
-        </dependency>
-	<dependency>
-   		 <groupId>org.apache.struts</groupId>
-   		 <artifactId>struts2-core</artifactId>
-   		 <version>2.2.3</version>
-	</dependency>
-	<dependency>
-	       <groupId>org.apache.struts</groupId>
-	       <artifactId>struts2-json-plugin</artifactId>
-	       <version>2.2.3</version>
-	       <scope>runtime</scope>
-	   </dependency>
-	<dependency>
-    		<groupId>junit</groupId>
-    		<artifactId>junit</artifactId>
-    		<version>4.10</version>
-		<scope>test</scope>
-	</dependency>
-	<dependency>
-    		<groupId>mysql</groupId>
-   		<artifactId>mysql-connector-java</artifactId>
-   		<version>5.1.17</version>
-		<scope>runtime,test</scope>
-	</dependency>
-	<!--dependency>
-    		<groupId>org.apache.hadoop</groupId>
-    		<artifactId>hadoop-test</artifactId>
-    		<version>0.20.2</version>
-		<scope>test</scope>
-	</dependency>
-	<dependency>
-    		<groupId>org.hibernate</groupId>
-    		<artifactId>hibernate-annotations</artifactId>
-    		<version>3.5.6-Final</version>
-	</dependency>-->
-	<dependency>
-    		<groupId>org.hibernate</groupId>
-    		<artifactId>hibernate-c3p0</artifactId>
-    		<version>3.6.7.Final</version>
-		<scope>runtime</scope>
-	</dependency>
-	<dependency>
-    		<groupId>net.sf.ehcache</groupId>
-    		<artifactId>ehcache-core</artifactId>
-    		<version>2.4.5</version>
-		<scope>runtime</scope>
-	</dependency>
-	<dependency>
-    		<groupId>org.hibernate</groupId>
-    		<artifactId>hibernate-validator</artifactId>
-   		 <version>3.1.0.GA</version>
-		<scope>runtime</scope>
-	</dependency>
-	<!--dependency>
-    		<groupId>org.springframework</groupId>
-    		<artifactId>spring-test</artifactId>
-    		<version>3.0.6.RELEASE</version>
-		<scope>test</scope>
-	</dependency>
-	<dependency>
-    		<groupId>org.springframework</groupId>
-    		<artifactId>spring-core</artifactId>
-    		<version>3.0.6.RELEASE</version>
-	</dependency-->
-
-    </dependencies>
-
-    <repositories>
-	 <repository>
-        <id>JBoss</id>
-        <name>JBoss Repsitory</name>
-        <url>https://repository.jboss.org/nexus/content/groups/public</url>
-    </repository>
-    </repositories>
-
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>${compileSource}</source>
-                    <target>${compileSource}</target>
-                    <showWarnings>true</showWarnings>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.mortbay.jetty</groupId>
-                <artifactId>jetty-maven-plugin</artifactId>
-                <version>8.0.1.v20110908</version>
-                <configuration>
-                    <webAppSourceDirectory>${basedir}/src/staticfiles</webAppSourceDirectory>
-                    <webAppConfig>
-                        <contextPath>/</contextPath>
-                        <descriptor>${basedir}/src/main/webapp/WEB-INF/web.xml</descriptor>
-                    </webAppConfig>
-                </configuration>
-            </plugin>
-	<plugin>
-        	<groupId>org.codehaus.mojo</groupId>
-        		<artifactId>sql-maven-plugin</artifactId>
-       			 <version>1.5</version>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<version>1.0</version>
+	<groupId>co.nubetech.crux</groupId>
+	<artifactId>crux</artifactId>
+	<packaging>war</packaging>
+	<name>crux</name>
+	<organization>
+		<name>Nube Technologies</name>
+		<url>http://nubetech.co</url>
+	</organization>
+	<licenses>
+		<license>
+			<name>Apache License</name>
+			<url></url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+	<developers>
+		<developer>
+			<id>nubetech-team</id>
+			<name>Nube Technologies Team</name>
+			<organization>Nube Technologies</organization>
+			<organizationUrl>http://nubetech.co</organizationUrl>
+		</developer>
+	</developers>
+	<properties>
+		<compileSource>1.6</compileSource>
+		<database.host>localhost</database.host>
+		<database.port>3306</database.port>
+		<database.name>crux</database.name>
+		<database.testDbName>testCrux</database.testDbName>
+		<database.user>root</database.user>
+		<database.password>root</database.password>
+	</properties>
+	<profiles>
+		<profile>
+			<id>hbase0.90</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+				<property>
+					<name>hadoop.profile</name>
+					<value>22</value>
+				</property>
+			</activation>
+			<properties>
+				<hbase.version>0.90.3</hbase.version>
+				<hadoop.version>0.20.2</hadoop.version>
+				<slf4j.version>1.5.8</slf4j.version>
+			</properties>
 			<dependencies>
 				<dependency>
-    					<groupId>mysql</groupId>
-   					<artifactId>mysql-connector-java</artifactId>
-   					<version>5.1.17</version>
+					<groupId>org.apache.hbase</groupId>
+					<artifactId>hbase</artifactId>
+					<version>${hbase.version}</version>
+					<exclusions>
+						<exclusion>
+							<groupId>org.slf4j</groupId>
+							<artifactId>slf4j-api</artifactId>
+						</exclusion>
+						<exclusion>
+							<groupId>org.slf4j</groupId>
+							<artifactId>slf4j-log4j12</artifactId>
+						</exclusion>
+					</exclusions>
 				</dependency>
-			</dependencies>      
-      			<!-- common configuration shared by all executions -->
-       			<configuration>
-          			<driver>com.mysql.jdbc.Driver</driver>
-          			<autocommit>true</autocommit>
-	  			<url>jdbc:mysql://${database.host}:${database.port}/${database.name}</url>
-          			<username>${database.user}</username>
-          			<password>${database.password}</password>
-        		</configuration>
-        		<executions>
-          			<execution>
-	   			 	<id>drop</id>
-            		<phase>process-test-resources</phase>
-           			 <goals>
-              			<goal>execute</goal>
-            			</goals>
-           		 <!--  specific configuration for this execution -->
-            			<configuration>
-              			<!-- specify your SQL commands, can be all of the following configurations -->
-               				<sqlCommand>drop database if exists ${database.testDbName}</sqlCommand>
-               				<onError>continue</onError>
-            			</configuration>
-          			</execution>
-         		 	<execution>
-           			 <id>create</id>
-	    			<phase>process-test-resources</phase>
-           			 <goals>
-            				  <goal>execute</goal>
-           			 </goals>
-            			 <!-- specific configuration for this execution -->
-            			<configuration>
-              				<!-- specify your SQL commands, can be all of the following configurations -->
-               				<sqlCommand>create database if not exists ${database.testDbName}</sqlCommand>
-               				<onError>continue</onError>
-            			</configuration>
-          		</execution>
-         		 <execution>
-				<id>schema</id>
-				<phase>process-test-resources</phase>
-           			 <goals>
-             			 <goal>execute</goal>
-            			 </goals>
-            			<!-- specific configuration for this execution -->
-           			 <configuration>
-              			<!-- specify your SQL commands, can be all of the following configurations -->
-             			<url>jdbc:mysql://${database.host}:${database.port}/${database.testDbName}</url>
-             			 <srcFiles>
-                			<srcFile>${basedir}/db/schema.sql</srcFile>
-              			</srcFiles>
-              			 <onError>continue</onError>
-            			</configuration>
-         		 </execution>
-       		</executions>
-      		</plugin>
-		   <plugin>
-       			 <groupId>org.codehaus.mojo</groupId>
-       			 <artifactId>cobertura-maven-plugin</artifactId>
-			 <version>2.5.1</version>
-       			 <configuration>
-         			 <!--instrumentation>
-           				 <ignores>
-             				 	<ignore>com.example.boringcode.*</ignore>
-            				</ignores>
-           			 	<excludes>
-              					<exclude>com/example/dullcode/**/*.class</exclude>
-             			 		<exclude>com/example/**/*Test.class</exclude>
-           				 </excludes>
-          			</instrumentation-->
-       			</configuration>
-       			<executions>
-          			<execution>
-            				<goals>
-              					<goal>clean</goal>
-            				</goals>
-         			 </execution>
-       			 </executions>
-      		  </plugin>
-		 <plugin>
-        		<groupId>org.apache.maven.plugins</groupId>
-       			 <artifactId>maven-jar-plugin</artifactId>
-       			 <version>2.3.2</version>
-			<configuration> 
-           			 	<excludes>
-              					<exclude>*.xml</exclude>
-             			 		<exclude>*.dtd</exclude>
-           				 </excludes>
-       			</configuration>
-        		<executions>
-          			<execution>
-            				<phase>package</phase>
-					<id>attach-sources</id>
-           					 <goals>
-             					 	<goal>jar</goal>
-           					 </goals>
-         				 </execution>
-       				 </executions>
-      			</plugin>
+				<dependency>
+					<groupId>org.apache.hbase</groupId>
+					<artifactId>hbase</artifactId>
+					<version>${hbase.version}</version>
+					<classifier>tests</classifier>
+					<scope>test</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.hadoop</groupId>
+					<artifactId>hadoop-test</artifactId>
+					<version>${hadoop.version}</version>
+					<scope>test</scope>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
 
-           </plugins>
-           <finalName>crux</finalName>
-    	</build>
+	<dependencies>
+		<dependency>
+							<groupId>org.slf4j</groupId>
+							<artifactId>slf4j-api</artifactId>
+							<version>${slf4j.version}</version>	
+							<scope>runtime</scope>
+							
+							
+						
+			</dependency>
+			<dependency>	<groupId>org.slf4j</groupId>
+							<artifactId>slf4j-log4j12</artifactId>
+							<version>${slf4j.version}</version>	
+							<scope>runtime</scope>
+						</dependency>
+		<dependency>
+			<groupId>commons-pool</groupId>
+			<artifactId>commons-pool</artifactId>
+			<version>1.5.6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>1.8.5</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code</groupId>
+			<artifactId>struts2-fullhibernatecore-plugin</artifactId>
+			<version>2.2.2-GA</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.struts</groupId>
+			<artifactId>struts2-core</artifactId>
+			<version>2.2.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.struts</groupId>
+			<artifactId>struts2-json-plugin</artifactId>
+			<version>2.2.3</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.17</version>
+			<scope>runtime,test</scope>
+		</dependency>		
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-c3p0</artifactId>
+			<version>3.6.7.Final</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.ehcache</groupId>
+			<artifactId>ehcache-core</artifactId>
+			<version>2.4.5</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>3.1.0.GA</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-commons-annotations</artifactId>
+			<version>3.2.0.Final</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>3.6.7.Final</version>
+		</dependency>
+	</dependencies>
+	<repositories>
+		<repository>
+			<id>JBoss</id>
+			<name>JBoss Repsitory</name>
+			<url>https://repository.jboss.org/nexus/content/groups/public</url>
+		</repository>
+	</repositories>
+
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>${compileSource}</source>
+					<target>${compileSource}</target>
+					<showWarnings>true</showWarnings>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>8.0.1.v20110908</version>
+				<configuration>
+					<webAppSourceDirectory>${basedir}/src/staticfiles</webAppSourceDirectory>
+					<webAppConfig>
+						<contextPath>/</contextPath>
+						<descriptor>${basedir}/src/main/webapp/WEB-INF/web.xml</descriptor>
+					</webAppConfig>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>sql-maven-plugin</artifactId>
+				<version>1.5</version>
+				<dependencies>
+					<dependency>
+						<groupId>mysql</groupId>
+						<artifactId>mysql-connector-java</artifactId>
+						<version>5.1.17</version>
+					</dependency>
+				</dependencies>
+				<!-- common configuration shared by all executions -->
+				<configuration>
+					<driver>com.mysql.jdbc.Driver</driver>
+					<autocommit>true</autocommit>
+					<url>jdbc:mysql://${database.host}:${database.port}/${database.name}</url>
+					<username>${database.user}</username>
+					<password>${database.password}</password>
+				</configuration>
+				<executions>
+					<execution>
+						<id>drop</id>
+						<phase>process-test-resources</phase>
+						<goals>
+							<goal>execute</goal>
+						</goals>
+						<!-- specific configuration for this execution -->
+						<configuration>
+							<!-- specify your SQL commands, can be all of the following configurations -->
+							<sqlCommand>drop database if exists ${database.testDbName}</sqlCommand>
+							<onError>continue</onError>
+						</configuration>
+					</execution>
+					<execution>
+						<id>create</id>
+						<phase>process-test-resources</phase>
+						<goals>
+							<goal>execute</goal>
+						</goals>
+						<!-- specific configuration for this execution -->
+						<configuration>
+							<!-- specify your SQL commands, can be all of the following configurations -->
+							<sqlCommand>create database if not exists ${database.testDbName}</sqlCommand>
+							<onError>continue</onError>
+						</configuration>
+					</execution>
+					<execution>
+						<id>schema</id>
+						<phase>process-test-resources</phase>
+						<goals>
+							<goal>execute</goal>
+						</goals>
+						<!-- specific configuration for this execution -->
+						<configuration>
+							<!-- specify your SQL commands, can be all of the following configurations -->
+							<url>jdbc:mysql://${database.host}:${database.port}/${database.testDbName}</url>
+							<srcFiles>
+								<srcFile>${basedir}/db/schema.sql</srcFile>
+							</srcFiles>
+							<onError>continue</onError>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.5.1</version>
+				<configuration>
+					<!--instrumentation> <ignores> <ignore>com.example.boringcode.*</ignore> 
+						</ignores> <excludes> <exclude>com/example/dullcode/**/*.class</exclude> 
+						<exclude>com/example/**/*Test.class</exclude> </excludes> </instrumentation -->
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>clean</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<excludes>
+						<exclude>*.xml</exclude>
+						<exclude>*.dtd</exclude>
+					</excludes>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+		</plugins>
+		<finalName>crux</finalName>
+	</build>
 </project>
