git commit "Parameterize all versions in pom.xml"

--- a/pom.xml
+++ b/pom.xml
@@ -34,15 +34,25 @@
 		<database.testDbName>${testDbName}</database.testDbName>
 		<database.user>${user}</database.user>
 		<database.password>${password}</database.password>
-		<commons-pool>1.5.6</commons-pool>
-		<mockito-core>1.8.5</mockito-core>
-		<struts2-fullhibernatecore-plugin>2.2.2-GA</struts2-fullhibernatecore-plugin>
-		<struts2-core>2.2.3</struts2-core>
-		<struts2-json-plugin>2.2.3</struts2-json-plugin>
-		<struts2-json-plugin>4.10</struts2-json-plugin>
-		<mysql-connector-java>5.1.17</mysql-connector-java>
-		<hibernate-c3p0></hibernate-c3p0>
-		<maven-compiler-plugin.version></maven-compiler-plugin.version>
+		<commons-pool.version>1.5.6</commons-pool.version>
+		<mockito-core.version>1.8.5</mockito-core.version>
+		<struts2-fullhibernatecore-plugin.version>2.2.2-GA</struts2-fullhibernatecore-plugin.version>
+		<struts2-core.version>2.2.3</struts2-core.version>
+		<struts2-json-plugin.version>2.2.3</struts2-json-plugin.version>
+		<junit.version>4.10</junit.version>
+		<mysql-connector-java.version>5.1.17</mysql-connector-java.version>
+		<hibernate-c3p0.version>3.6.7.Final</hibernate-c3p0.version>
+		<ehcache-core.version>2.4.5</ehcache-core.version>
+		<hibernate-validator.version>3.1.0.GA</hibernate-validator.version>
+		<hibernate-commons-annotations.version>3.2.0.Final</hibernate-commons-annotations.version>
+		<hibernate-core.version>3.6.7.Final</hibernate-core.version>
+		<maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
+		<jetty-maven-plugin.version>8.0.1.v20110908</jetty-maven-plugin.version>
+		<sql-maven-plugin.version>1.5</sql-maven-plugin.version>
+		<mysql-connector-java.version>5.1.17</mysql-connector-java.version>
+		<cobertura-maven-plugin.version>2.5.1</cobertura-maven-plugin.version>
+		<maven-jar-plugin.version>2.3.2</maven-jar-plugin.version>
+		<properties-maven-plugin.version>1.0-alpha-1</properties-maven-plugin.version>
 	</properties>
 	<profiles>
 		<profile>
@@ -370,14 +380,7 @@
                    <warFile>${basedir}/target/crux.war</warFile>
                 </configuration>
             </plugin-->
-            <!--plugin>
-                <groupId>org.mortbay.jetty</groupId>
-                <artifactId>maven-jetty-plugin</artifactId>
-                 <version>6.1.7</version>
-                <configuration>
-                  
-                </configuration>
-            </plugin-->
+            
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
