--- a/pom.xml
+++ b/pom.xml
@@ -208,6 +208,16 @@
 			<version>2.2.2-GA</version>
 		</dependency>
 		<dependency>
+<groupId>asm</groupId>
+<artifactId>asm</artifactId>
+<version>2.2.2</version>
+</dependency>
+<dependency>
+<groupId>asm</groupId>
+<artifactId>asm-commons</artifactId>
+<version>2.2.2</version>
+</dependency>
+		<dependency>
 			<groupId>org.apache.struts</groupId>
 			<artifactId>struts2-core</artifactId>
 			<version>2.2.3</version>
