--- a/pom.xml
+++ b/pom.xml
@@ -487,14 +487,29 @@
                  </archive>
                </configuration>
            </plugin>
-                    <plugin>
-                        <artifactId>maven-assembly-plugin</artifactId>
-                        <configuration>
-                              <descriptors>
-                                 <descriptor>assembly.xml</descriptor>
-                              </descriptors>
-                            </configuration>
-                    </plugin>
+           <plugin>
+               <artifactId>maven-assembly-plugin</artifactId>
+               <configuration>
+                     <descriptors>
+                        <descriptor>assembly.xml</descriptor>
+                     </descriptors>
+                   </configuration>
+           </plugin>
+           <plugin>
+			    <groupId>org.codehaus.mojo</groupId>
+			    <artifactId>build-helper-maven-plugin</artifactId>
+			    <executions>
+			        <execution>
+			            <phase>generate-sources</phase>
+			            <goals><goal>add-source</goal></goals>
+			            <configuration>
+			                <sources>
+			                    <source>${basedir}/testData</source>
+			                </sources>
+			            </configuration>
+			        </execution>
+			    </executions>
+			</plugin>
           
 		</plugins>
 		<finalName>crux</finalName>
