--- a/pom.xml
+++ b/pom.xml
@@ -178,6 +178,55 @@
 			</dependencies>			
 		</profile>
 		<profile>
+			<id></id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+				<property>
+					<name>hbase0.92</name>
+				</property>
+			</activation>
+			<properties>
+				<hbase.version>0.92.1</hbase.version>
+				<hadoop.version>1.0.0</hadoop.version>
+				<slf4j.version>1.5.8</slf4j.version>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>org.apache.hbase</groupId>
+					<artifactId>hbase</artifactId>
+					<version>${hbase.version}</version>
+					<exclusions>
+						<exclusion>
+							<groupId>org.slf4j</groupId>
+							<artifactId>slf4j-api</artifactId>
+						</exclusion>
+						<exclusion>
+							<groupId>org.slf4j</groupId>
+							<artifactId>slf4j-log4j12</artifactId>
+						</exclusion>
+					</exclusions>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.hbase</groupId>
+					<artifactId>hbase</artifactId>
+					<version>${hbase.version}</version>
+					<classifier>tests</classifier>
+					<scope>test</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.hadoop</groupId>
+					<artifactId>hadoop-core</artifactId>
+					<version>${hadoop.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.hadoop</groupId>
+					<artifactId>hadoop-test</artifactId>
+					<version>${hadoop.version}</version>
+					<scope>test</scope>
+				</dependency>
+			</dependencies>			
+		</profile>
+		<profile>
 			<id>cdh3</id>
 			<activation>
 				<activeByDefault>false</activeByDefault>
