--- a/pom.xml
+++ b/pom.xml
@@ -236,8 +236,8 @@
 			</activation>
 			<properties>
 				<hbase.version>0.92.1</hbase.version>
-				<hadoop.version>2.0.0-alpha</hadoop.version>
-				<hadoop.test.version>1.0.3</hadoop.test.version>
+				<hadoop.version>1.0.0</hadoop.version>
+				<hadoop.test.version>1.0.0</hadoop.test.version>
 				<slf4j.version>1.5.8</slf4j.version>
 			</properties>
 			<dependencies>
@@ -265,33 +265,13 @@
 				</dependency>
 				<dependency>
 					<groupId>org.apache.hadoop</groupId>
-					<artifactId>hadoop-common</artifactId>
+					<artifactId>hadoop-core</artifactId>
 					<version>${hadoop.version}</version>
-				</dependency>
-				<dependency>
-					<groupId>org.apache.hadoop</groupId>
-					<artifactId>hadoop-common</artifactId>
-					<version>${hadoop.version}</version>
-					<classifier>tests</classifier>
-					<scope>test</scope>
 				</dependency>
 				<dependency>
 					<groupId>org.apache.hadoop</groupId>
 					<artifactId>hadoop-test</artifactId>
 					<version>${hadoop.test.version}</version>
-					<scope>test</scope>
-				</dependency>
-				<dependency>
-					<groupId>org.apache.hadoop</groupId>
-					<artifactId>hadoop-hdfs</artifactId>
-					<version>${hadoop.version}</version>
-					<scope>test</scope>
-				</dependency>
-				<dependency>
-					<groupId>org.apache.hadoop</groupId>
-					<artifactId>hadoop-hdfs</artifactId>
-					<version>${hadoop.version}</version>
-					<classifier>tests</classifier>
 					<scope>test</scope>
 				</dependency>
 			</dependencies>			
